--- a/css/screen.css
+++ b/css/screen.css
@@ -26,7 +26,7 @@ body, a { font-family: "Noto Sans", sans-serif; font-size: 14px; line-height: 22
 
 em { font-family: "Noto Serif", serif; }
 
-.wrap { width: 100%; min-width: 320px; height: 100%; position: relative; background-color: #333333; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.wrap { width: 100%; height: 100%; min-width: 320px; position: relative; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 .ico { display: inline-block; vertical-align: middle; }
 
@@ -36,23 +36,24 @@ em { font-family: "Noto Serif", serif; }
 .nav { background-color: #333333; width: 280px; position: fixed; top: 0; left: 0; height: 100%; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 @media only screen and (max-width: 320px) { .nav { z-index: 111; left: -280px; } }
 .nav .nav__topper { height: 55px; line-height: 55px; border-bottom: 1px solid black; padding-left: 15px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
-.nav .nav__label { height: 30px; line-height: 30px; border: 1px solid #88cc7a; color: #88cc7a; padding: 0 15px; display: inline-block; -webkit-border-radius: 15px; -moz-border-radius: 15px; -ms-border-radius: 15px; -o-border-radius: 15px; border-radius: 15px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
+.nav .nav__label { height: 30px; line-height: 30px; border: 1px solid #88cc7a; color: #88cc7a; padding: 0 15px; display: inline-block; font-size: 12px; -webkit-border-radius: 15px; -moz-border-radius: 15px; -ms-border-radius: 15px; -o-border-radius: 15px; border-radius: 15px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .nav .nav__label:hover { background-color: #262626; }
 .nav .nav__content { padding: 20px 15px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .nav .nav__item-out { position: relative; }
 .nav .nav__item-out:hover .nav__item-point span { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=20); opacity: 0.2; }
 .nav .nav__item-out:hover .nav__item-point:hover span { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); opacity: 1; }
-.nav .nav__item { color: white; font-weight: bold; display: block; line-height: 45px; height: 45px; white-space: nowrap; padding-left: 15px; outline: none; position: relative; overflow: hidden; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
-.nav .nav__item:hover { color: gray; }
+.nav .nav__item { color: gray; font-weight: bold; display: block; line-height: 32px; height: 32px; white-space: nowrap; padding-left: 10px; outline: none; position: relative; overflow: hidden; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
+.nav .nav__item:hover { color: white; }
 .nav .nav__item:hover .nav__item-point { cursor: pointer; }
-.nav .nav__item:focus { background-color: white; color: #333333; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; }
+.nav .nav__item:focus { background-color: white; color: #333333; -webkit-border-radius: 2px; -moz-border-radius: 2px; -ms-border-radius: 2px; -o-border-radius: 2px; border-radius: 2px; }
 .nav .nav__item:focus .nav__item-point { cursor: default; }
+.nav .is-active { color: white; }
 .nav .nav__item:focus + .nav__item-point { display: none; }
-.nav .nav__item-point { position: absolute; bottom: -2px; right: 0px; display: block; height: 20px; cursor: pointer; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; *zoom: 1; }
+.nav .nav__item-point { position: absolute; bottom: -4px; right: -13px; display: block; height: 40px; width: 40px; cursor: pointer; padding: 15px 5px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; *zoom: 1; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .nav .nav__item-point:after { content: " "; display: table; clear: both; }
 .nav .nav__item-point span { background-color: white; height: 4px; width: 4px; margin-left: 3px; float: left; filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0); opacity: 0; -webkit-border-radius: 4px; -moz-border-radius: 4px; -ms-border-radius: 4px; -o-border-radius: 4px; border-radius: 4px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .nav .nav__item-point:hover span { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); opacity: 1; }
-.nav .nav__item-popup { position: absolute; top: 45px; right: -58px; display: inline-block; z-index: 11; background-color: #cccccc; padding: 10px; display: none; text-align: center; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; *zoom: 1; }
+.nav .nav__item-popup { position: absolute; top: 45px; right: -58px; display: inline-block; z-index: 11; background-color: #f2f2f2; padding: 10px 20px; display: none; text-align: center; -webkit-border-radius: 5px; -moz-border-radius: 5px; -ms-border-radius: 5px; -o-border-radius: 5px; border-radius: 5px; *zoom: 1; }
 .nav .nav__item-popup:after { content: " "; display: table; clear: both; }
 .nav .nav__item-popup:before { position: absolute; content: ""; top: -5px; right: 50%; margin-right: -3px; width: 0; height: 0; border-style: solid; border-width: 0 5px 5px 5px; border-color: transparent transparent #cccccc transparent; display: inline-block; }
 .nav .nav__item-popup .nav__item-link { padding: 0 5px; }
@@ -63,11 +64,12 @@ em { font-family: "Noto Serif", serif; }
 .nav .link-out { display: table; width: 100%; border-collapse: collapse; }
 .nav .nav__item-link { z-index: 11; cursor: pointer; display: table-cell; text-align: center; font-weight: normal; font-size: 12px; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; }
 .nav .nav__item-link:hover { color: #f24949; }
+.nav .link-cancel { color: #f24949; }
 
 .nav-open { left: 0; z-index: 2; }
 
 /*-----main------------------------------------------------------ */
-.main { background-color: white; position: relative; width: 100%; z-index: 3; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.main { background-color: white; position: relative; width: 100%; height: 100%; z-index: 3; -webkit-transition: all 0.3s; -moz-transition: all 0.3s; -o-transition: all 0.3s; transition: all 0.3s; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 
 .main-open { margin-left: 280px; z-index: 1; }
 .main-open .header .header__btn { display: none; }
@@ -82,7 +84,7 @@ em { font-family: "Noto Serif", serif; }
 @media only screen and (max-width: 560px) { .header .header__title .header__text { visibility: hidden; } }
 
 /*-----content------------------------------------------------------ */
-.content { padding: 70px 60px 20px 160px; padding-top: 120px; max-width: 1200px; margin: 0 auto; position: relative; *zoom: 1; }
+.content { padding: 70px 60px 20px 160px; padding-top: 120px; max-width: 1200px; margin: 0 auto; position: relative; background-color: white; *zoom: 1; }
 .content:after { content: " "; display: table; clear: both; }
 @media only screen and (max-width: 1024px) { .content { padding-left: 100px; padding-top: 100px; } }
 @media only screen and (max-width: 768px) { .content { padding-left: 60px; } }
@@ -202,3 +204,5 @@ em { font-family: "Noto Serif", serif; }
 @-moz-keyframes bounce2 { 100% { opacity: 1; width: 28px; left: 23px; } }
 
 @keyframes bounce2 { 100% { opacity: 1; width: 28px; left: 23px; } }
+
+hr { border: none; display: inline-block; height: 1px; width: 80px; background-color: #e6e6e6; }
