--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -35,10 +35,10 @@ em
 
 .wrap
 	width: 100%
+	height: 100% 
 	min-width: 320px
-	height: 100%
 	position: relative
-	background-color: $main-c 
+	//background-color: $main-c 
 	//-ms-overflow-x: hidden 
 	//overflow-x: hidden 
 	//background-color: #FFF 
