--- a/css/screen.css
+++ b/css/screen.css
@@ -206,3 +206,17 @@ em { font-family: "Noto Serif", serif; }
 @keyframes bounce2 { 100% { opacity: 1; width: 28px; left: 23px; } }
 
 hr { border: none; display: inline-block; height: 1px; width: 80px; background-color: #e6e6e6; }
+
+.page2 .add, .page2 .add-min { display: none; }
+.page2 .title-input { display: block; width: 100%; margin-bottom: 6px; }
+.page2 .title-input:-ms-input-placeholder { color: #dddddd; }
+.page2 .title-input:-moz-placeholder { color: #dddddd; }
+.page2 .title-input::-moz-placeholder { color: #dddddd; }
+.page2 .title-input::-webkit-input-placeholder { color: #dddddd; }
+.page2 .title-input::placeholder { color: #dddddd; }
+.page2 .title-input:focus:-ms-input-placeholder { color: transparent; }
+.page2 .title-input:focus:-moz-placeholder { color: transparent; }
+.page2 .title-input:focus::-moz-placeholder { color: transparent; }
+.page2 .title-input:focus::-webkit-input-placeholder { color: transparent; }
+.page2 .title-input:focus::placeholder { color: transparent; }
+.page2 .textarea { padding: 0; margin: 0; border: none; outline: none; resize: none; min-height: 60px; width: 100%; font-family: "Noto Sans", sans-serif; font-size: 14px; line-height: 22px; color: #333333; margin-bottom: 5px; }
