--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,5 +1,4 @@
 .nav, .main
-	//height: 100%
 	display: block
 	+box	
 /*-----nav------------------------------------------------------*/
@@ -78,7 +77,6 @@
 		height: 40px
 		width: 40px
 		cursor: pointer
-		//background: #f0f
 		padding: 15px 5px  
 		+transition
 		+clr
@@ -100,13 +98,11 @@
 		top: 45px
 		right: -58px
 		display: inline-block
-		//width: 135px
 		z-index: 11  
 		background-color: #f2f2f2
 		padding: 10px 20px
 		display: none	
 		text-align: center	
-		//+transition 
 		+border-radius(5px)
 		+clr
 		&:before
@@ -142,8 +138,6 @@
 		width: 100%
 		border-collapse: collapse					
 	.nav__item-link
-		//float: left
-		//margin: 0 5px 
 		z-index: 11
 		cursor: pointer
 		display: table-cell
@@ -157,8 +151,7 @@
 		color: $cancel-c				
 .nav-open
 	left: 0	
-	z-index: 2
-	 			
+	z-index: 2			
 /*-----main------------------------------------------------------*/
 .main
 	background-color: #fff
@@ -205,7 +198,6 @@
 	margin: 0 auto 
 	position: relative
 	background-color: #FFF 
-	//height: 100%
 	+clr
 	+r(w1024)
 		padding-left: 100px
@@ -476,17 +468,7 @@
 		height: 58px
 		width: 58px		
 
-
-
-
-
-	// .add
-	// 	display: none
-	// 	+r(w768)
-	// 		display: block
-	// 		top: -3px
-	// 		left: 47.5%
-	// 		border: none		
+	
 .add-min
 	position: absolute
 	display: inline-block
@@ -640,7 +622,6 @@
 	+border-radius(5px)
 	+clr 
 	+box 
-	//+r(w560)
 	.user__pic
 		float: left
 		display: inline-block
@@ -736,12 +717,37 @@
 		left: 23px	
 		
 hr
-	//position: absolute
-	//content: "" 
-	//top: 0
-	//left: 0
 	border: none 
 	display: inline-block
 	height: 1px
 	width: 80px
 	background-color: #e6e6e6
+
+
+
+.page2
+	.add, .add-min
+		display: none
+	.title-input
+		display: block
+		width: 100%
+		margin-bottom: 6px
+		+placeholder
+			color: #ddd 	
+		&:focus
+			+placeholder
+				color: transparent 
+	.textarea	
+		padding: 0
+		margin: 0	
+		border: none
+		outline: none
+		resize: none
+		min-height: 60px
+		width: 100%
+		font-family: $noto-sans
+		font-size: $font-s  
+		line-height: $font-h 
+		color: $main-c	
+		margin-bottom: 5px	
+			
